sophisthse 0.62
-----------

* Output 'ts' option is new and the default one.


sophisthse 0.6
-----------

* Options ... passed to getURL. This allows the use of proxy server.

sophisthse 0.5
-----------

* Code style cleanup
* Add travis shield
* Cyrillic encoding tested on macos and windows 10

sophisthse 0.2
-----------

* warning when automatically detected ts period is not equal to the last letter
* multiple time series download at once

sophisthse 0.1
-----------

* first public release