@@ -1,6 +1,7 @@
 # Generated by roxygen2: do not edit by hand
 
 export(rus2num)
+export(set_variable_labels)
 export(sophisthse)
 export(sophisthse0)
 export(sophisthse_tables)
