@@ -40,9 +40,13 @@ sophisthse_tables()
 Не очень срочные планы по развитию:
 
 - [ ] команда для получения списка всех рядов --- скорректировать (туда сразу качать описание переменной)
+- [ ] ряды пересматриваются. Добавить дату скачивания? Вести архив обновлений?
 - [ ] в коде разделить: название таблицы с рядами и название ряда (нужно!) при этом базовая команда sophisthse должна кушать и названия таблиц и названия рядов и возвращать, то что хочет пользователь
-- [ ] убрать warning при скачивании рядов с пропущенными данными. Всё работает корректно, поэтому просто разобраться, где он возникает и убрать. Возникает при вызове rus2num, например, `sophisthse("HHI_Q_I")`
+- [ ] убрать warning при скачивании рядов с пропущенными данными. Всё работает корректно, но для благозвучия лучше убрать. Возникает при вызове rus2num, например, `sophisthse("HHI_Q_I")`
+- [ ] у некоторых рядов в названии есть русская М вместо английской M. Переделать такой трэшак в английские буквы :)
 - [ ] может наброситься на разномастные таблицы? Данные опросов можно скачивать целиком без всяких пакетов после регистрации.
+- [x] добавить labels для смысла переменных в data.frame, чтобы красиво отображалось в Rstudio (а-ля haven)
+- [x] тип `ts` в output для корретного отображения дат при использовании пакета `forecast`.
 
 ### English translation:
 
